DLP_AMPL/bin/parser/y.output
   0  $accept : program $end

   1  program : _program main

   2  _program :
   3           | _program variable_definition
   4           | _program function_definition

   5  $$1 :

   6  main : DEF $$1 MAIN '(' ')' ':' VOID '{' function_body '}'

   7  variable_definition : variables ':' type ';'

   8  variables : ID
   9            | variables ',' ID

  10  $$2 :

  11  function_definition : DEF $$2 ID '(' parameters ')' ':' return_type '{' function_body '}'

  12  parameters :
  13             | _parameters

  14  _parameters : parameter
  15              | _parameters ',' parameter

  16  parameter : ID ':' simple_type

  17  return_type : simple_type
  18              | VOID

  19  function_body :
  20                | variable_definitions statements
  21                | variable_definitions
  22                | statements

  23  variable_definitions : variable_definition
  24                       | variable_definitions variable_definition

  25  statements : statement
  26             | statements statement

  27  statement : statement_without_semicolon ';'
  28            | while
  29            | do_while
  30            | for
  31            | if

  32  statement_without_semicolon : assignment_as_expression
  33                              | function_call_as_expression
  34                              | return
  35                              | read
  36                              | write
  37                              | plus_equal
  38                              | minus_equal
  39                              | mul_equal
  40                              | div_equal
  41                              | mod_equal
  42                              | pre_plus_plus_as_expression
  43                              | pre_minus_minus_as_expression
  44                              | post_plus_plus_as_expression
  45                              | post_minus_minus_as_expression

  46  type : simple_type
  47       | array
  48       | struct

  49  simple_type : INT
  50              | DOUBLE
  51              | CHAR

  52  array : '[' INT_CONSTANT ']' type

  53  struct : STRUCT '{' struct_body '}'

  54  struct_body : variable_definition
  55              | struct_body variable_definition

  56  read : INPUT expressions

  57  $$3 :

  58  write : PRINT $$3 expressions

  59  $$4 :

  60  write : PRINTLN $$4 expressions

  61  expressions : expression
  62              | expressions ',' expression

  63  while : WHILE expression ':' '{' statements '}'
  64        | WHILE expression ':' statement

  65  do_while : DO ':' '{' statements '}' WHILE expression ';'
  66           | DO ':' statement WHILE expression ';'

  67  for : FOR '(' for_parenthesis_body ')' ':' '{' statements '}'
  68      | FOR '(' for_parenthesis_body ')' ':' statement

  69  for_parenthesis_body : statement_without_semicolon_1mcs ';' expression ';' statement_without_semicolon_1mcs

  70  statement_without_semicolon_1mcs : statement_without_semicolon
  71                                   | statement_without_semicolon_1mcs ',' statement_without_semicolon

  72  if : IF expression ':' '{' statements '}'
  73     | IF expression ':' '{' statements '}' ELSE '{' statements '}'
  74     | IF expression ':' '{' statements '}' ELSE statement
  75     | IF expression ':' statement
  76     | IF expression ':' statement ELSE '{' statements '}'
  77     | IF expression ':' statement ELSE statement

  78  $$5 :

  79  return : RETURN $$5 expression

  80  parameters_in_function_call :
  81                              | expressions

  82  plus_equal : expression PLUS_EQUAL expression

  83  minus_equal : expression MINUS_EQUAL expression

  84  mul_equal : expression MUL_EQUAL expression

  85  div_equal : expression DIV_EQUAL expression

  86  mod_equal : expression MOD_EQUAL expression

  87  expression : expression AND expression
  88             | expression OR expression
  89             | xor_expression
  90             | expression '>' expression
  91             | expression GREATER_OR_EQUAL expression
  92             | expression '<' expression
  93             | expression LESS_OR_EQUAL expression
  94             | expression DISTINCT expression
  95             | expression EQUALS expression
  96             | expression '+' expression
  97             | expression '-' expression
  98             | expression '*' expression
  99             | expression '/' expression
 100             | expression '%' expression
 101             | '!' expression
 102             | '-' expression
 103             | '(' simple_type ')' expression
 104             | expression '.' ID
 105             | expression '[' expression ']'
 106             | '(' expression ')'
 107             | function_call_as_expression
 108             | INT_CONSTANT
 109             | REAL_CONSTANT
 110             | CHAR_CONSTANT
 111             | ID
 112             | pre_plus_plus_as_expression
 113             | pre_minus_minus_as_expression
 114             | post_plus_plus_as_expression
 115             | post_minus_minus_as_expression
 116             | ternaryOperator
 117             | assignment_as_expression

 118  function_call_as_expression : ID '(' parameters_in_function_call ')'

 119  pre_plus_plus_as_expression : PLUS_PLUS expression

 120  pre_minus_minus_as_expression : MINUS_MINUS expression

 121  post_plus_plus_as_expression : expression PLUS_PLUS

 122  post_minus_minus_as_expression : expression MINUS_MINUS

 123  ternaryOperator : expression '?' expression ':' expression

 124  assignment_as_expression : expression '=' expression

 125  xor_expression : expression XOR expression

state 0
	$accept : . program $end  (0)
	_program : .  (2)

	.  reduce 2

	program  goto 1
	_program  goto 2


state 1
	$accept : program . $end  (0)

	$end  accept


state 2
	program : _program . main  (1)
	_program : _program . variable_definition  (3)
	_program : _program . function_definition  (4)

	DEF  shift 3
	ID  shift 4
	.  error

	main  goto 5
	variable_definition  goto 6
	function_definition  goto 7
	variables  goto 8


state 3
	main : DEF . $$1 MAIN '(' ')' ':' VOID '{' function_body '}'  (6)
	function_definition : DEF . $$2 ID '(' parameters ')' ':' return_type '{' function_body '}'  (11)
	$$1 : .  (5)
	$$2 : .  (10)

	ID  reduce 10
	MAIN  reduce 5

	$$1  goto 9
	$$2  goto 10


state 4
	variables : ID .  (8)

	.  reduce 8


state 5
	program : _program main .  (1)

	.  reduce 1


state 6
	_program : _program variable_definition .  (3)

	.  reduce 3


state 7
	_program : _program function_definition .  (4)

	.  reduce 4


state 8
	variable_definition : variables . ':' type ';'  (7)
	variables : variables . ',' ID  (9)

	','  shift 11
	':'  shift 12
	.  error


state 9
	main : DEF $$1 . MAIN '(' ')' ':' VOID '{' function_body '}'  (6)

	MAIN  shift 13
	.  error


state 10
	function_definition : DEF $$2 . ID '(' parameters ')' ':' return_type '{' function_body '}'  (11)

	ID  shift 14
	.  error


state 11
	variables : variables ',' . ID  (9)

	ID  shift 15
	.  error


state 12
	variable_definition : variables ':' . type ';'  (7)

	INT  shift 16
	DOUBLE  shift 17
	CHAR  shift 18
	STRUCT  shift 19
	'['  shift 20
	.  error

	type  goto 21
	simple_type  goto 22
	array  goto 23
	struct  goto 24


state 13
	main : DEF $$1 MAIN . '(' ')' ':' VOID '{' function_body '}'  (6)

	'('  shift 25
	.  error


state 14
	function_definition : DEF $$2 ID . '(' parameters ')' ':' return_type '{' function_body '}'  (11)

	'('  shift 26
	.  error


state 15
	variables : variables ',' ID .  (9)

	.  reduce 9


state 16
	simple_type : INT .  (49)

	.  reduce 49


state 17
	simple_type : DOUBLE .  (50)

	.  reduce 50


state 18
	simple_type : CHAR .  (51)

	.  reduce 51


state 19
	struct : STRUCT . '{' struct_body '}'  (53)

	'{'  shift 27
	.  error


state 20
	array : '[' . INT_CONSTANT ']' type  (52)

	INT_CONSTANT  shift 28
	.  error


state 21
	variable_definition : variables ':' type . ';'  (7)

	';'  shift 29
	.  error


state 22
	type : simple_type .  (46)

	.  reduce 46


state 23
	type : array .  (47)

	.  reduce 47


state 24
	type : struct .  (48)

	.  reduce 48


state 25
	main : DEF $$1 MAIN '(' . ')' ':' VOID '{' function_body '}'  (6)

	')'  shift 30
	.  error


state 26
	function_definition : DEF $$2 ID '(' . parameters ')' ':' return_type '{' function_body '}'  (11)
	parameters : .  (12)

	ID  shift 31
	')'  reduce 12

	parameters  goto 32
	_parameters  goto 33
	parameter  goto 34


state 27
	struct : STRUCT '{' . struct_body '}'  (53)

	ID  shift 4
	.  error

	variable_definition  goto 35
	variables  goto 8
	struct_body  goto 36


state 28
	array : '[' INT_CONSTANT . ']' type  (52)

	']'  shift 37
	.  error


state 29
	variable_definition : variables ':' type ';' .  (7)

	.  reduce 7


state 30
	main : DEF $$1 MAIN '(' ')' . ':' VOID '{' function_body '}'  (6)

	':'  shift 38
	.  error


state 31
	parameter : ID . ':' simple_type  (16)

	':'  shift 39
	.  error


state 32
	function_definition : DEF $$2 ID '(' parameters . ')' ':' return_type '{' function_body '}'  (11)

	')'  shift 40
	.  error


state 33
	parameters : _parameters .  (13)
	_parameters : _parameters . ',' parameter  (15)

	','  shift 41
	')'  reduce 13


state 34
	_parameters : parameter .  (14)

	.  reduce 14


state 35
	struct_body : variable_definition .  (54)

	.  reduce 54


state 36
	struct : STRUCT '{' struct_body . '}'  (53)
	struct_body : struct_body . variable_definition  (55)

	ID  shift 4
	'}'  shift 42
	.  error

	variable_definition  goto 43
	variables  goto 8


state 37
	array : '[' INT_CONSTANT ']' . type  (52)

	INT  shift 16
	DOUBLE  shift 17
	CHAR  shift 18
	STRUCT  shift 19
	'['  shift 20
	.  error

	type  goto 44
	simple_type  goto 22
	array  goto 23
	struct  goto 24


state 38
	main : DEF $$1 MAIN '(' ')' ':' . VOID '{' function_body '}'  (6)

	VOID  shift 45
	.  error


state 39
	parameter : ID ':' . simple_type  (16)

	INT  shift 16
	DOUBLE  shift 17
	CHAR  shift 18
	.  error

	simple_type  goto 46


state 40
	function_definition : DEF $$2 ID '(' parameters ')' . ':' return_type '{' function_body '}'  (11)

	':'  shift 47
	.  error


state 41
	_parameters : _parameters ',' . parameter  (15)

	ID  shift 31
	.  error

	parameter  goto 48


state 42
	struct : STRUCT '{' struct_body '}' .  (53)

	.  reduce 53


state 43
	struct_body : struct_body variable_definition .  (55)

	.  reduce 55


state 44
	array : '[' INT_CONSTANT ']' type .  (52)

	.  reduce 52


state 45
	main : DEF $$1 MAIN '(' ')' ':' VOID . '{' function_body '}'  (6)

	'{'  shift 49
	.  error


state 46
	parameter : ID ':' simple_type .  (16)

	.  reduce 16


state 47
	function_definition : DEF $$2 ID '(' parameters ')' ':' . return_type '{' function_body '}'  (11)

	INT  shift 16
	DOUBLE  shift 17
	CHAR  shift 18
	VOID  shift 50
	.  error

	return_type  goto 51
	simple_type  goto 52


state 48
	_parameters : _parameters ',' parameter .  (15)

	.  reduce 15


state 49
	main : DEF $$1 MAIN '(' ')' ':' VOID '{' . function_body '}'  (6)
	function_body : .  (19)

	INT_CONSTANT  shift 53
	REAL_CONSTANT  shift 54
	CHAR_CONSTANT  shift 55
	INPUT  shift 56
	PRINT  shift 57
	PRINTLN  shift 58
	WHILE  shift 59
	IF  shift 60
	RETURN  shift 61
	ID  shift 62
	DO  shift 63
	FOR  shift 64
	'-'  shift 65
	'!'  shift 66
	PLUS_PLUS  shift 67
	MINUS_MINUS  shift 68
	'('  shift 69
	'}'  reduce 19

	variable_definition  goto 70
	function_body  goto 71
	variables  goto 8
	variable_definitions  goto 72
	statements  goto 73
	statement  goto 74
	statement_without_semicolon  goto 75
	while  goto 76
	do_while  goto 77
	for  goto 78
	if  goto 79
	assignment_as_expression  goto 80
	function_call_as_expression  goto 81
	return  goto 82
	read  goto 83
	write  goto 84
	plus_equal  goto 85
	minus_equal  goto 86
	mul_equal  goto 87
	div_equal  goto 88
	mod_equal  goto 89
	pre_plus_plus_as_expression  goto 90
	pre_minus_minus_as_expression  goto 91
	post_plus_plus_as_expression  goto 92
	post_minus_minus_as_expression  goto 93
	expression  goto 94
	xor_expression  goto 95
	ternaryOperator  goto 96


state 50
	return_type : VOID .  (18)

	.  reduce 18


state 51
	function_definition : DEF $$2 ID '(' parameters ')' ':' return_type . '{' function_body '}'  (11)

	'{'  shift 97
	.  error


state 52
	return_type : simple_type .  (17)

	.  reduce 17


state 53
	expression : INT_CONSTANT .  (108)

	.  reduce 108


state 54
	expression : REAL_CONSTANT .  (109)

	.  reduce 109


state 55
	expression : CHAR_CONSTANT .  (110)

	.  reduce 110


state 56
	read : INPUT . expressions  (56)

	INT_CONSTANT  shift 53
	REAL_CONSTANT  shift 54
	CHAR_CONSTANT  shift 55
	ID  shift 98
	'-'  shift 65
	'!'  shift 66
	PLUS_PLUS  shift 67
	MINUS_MINUS  shift 68
	'('  shift 69
	.  error

	assignment_as_expression  goto 99
	function_call_as_expression  goto 100
	pre_plus_plus_as_expression  goto 101
	pre_minus_minus_as_expression  goto 102
	post_plus_plus_as_expression  goto 103
	post_minus_minus_as_expression  goto 104
	expressions  goto 105
	expression  goto 106
	xor_expression  goto 95
	ternaryOperator  goto 96


state 57
	write : PRINT . $$3 expressions  (58)
	$$3 : .  (57)

	.  reduce 57

	$$3  goto 107


state 58
	write : PRINTLN . $$4 expressions  (60)
	$$4 : .  (59)

	.  reduce 59

	$$4  goto 108


state 59
	while : WHILE . expression ':' '{' statements '}'  (63)
	while : WHILE . expression ':' statement  (64)

	INT_CONSTANT  shift 53
	REAL_CONSTANT  shift 54
	CHAR_CONSTANT  shift 55
	ID  shift 98
	'-'  shift 65
	'!'  shift 66
	PLUS_PLUS  shift 67
	MINUS_MINUS  shift 68
	'('  shift 69
	.  error

	assignment_as_expression  goto 99
	function_call_as_expression  goto 100
	pre_plus_plus_as_expression  goto 101
	pre_minus_minus_as_expression  goto 102
	post_plus_plus_as_expression  goto 103
	post_minus_minus_as_expression  goto 104
	expression  goto 109
	xor_expression  goto 95
	ternaryOperator  goto 96


state 60
	if : IF . expression ':' '{' statements '}'  (72)
	if : IF . expression ':' '{' statements '}' ELSE '{' statements '}'  (73)
	if : IF . expression ':' '{' statements '}' ELSE statement  (74)
	if : IF . expression ':' statement  (75)
	if : IF . expression ':' statement ELSE '{' statements '}'  (76)
	if : IF . expression ':' statement ELSE statement  (77)

	INT_CONSTANT  shift 53
	REAL_CONSTANT  shift 54
	CHAR_CONSTANT  shift 55
	ID  shift 98
	'-'  shift 65
	'!'  shift 66
	PLUS_PLUS  shift 67
	MINUS_MINUS  shift 68
	'('  shift 69
	.  error

	assignment_as_expression  goto 99
	function_call_as_expression  goto 100
	pre_plus_plus_as_expression  goto 101
	pre_minus_minus_as_expression  goto 102
	post_plus_plus_as_expression  goto 103
	post_minus_minus_as_expression  goto 104
	expression  goto 110
	xor_expression  goto 95
	ternaryOperator  goto 96


state 61
	return : RETURN . $$5 expression  (79)
	$$5 : .  (78)

	.  reduce 78

	$$5  goto 111


state 62
	variables : ID .  (8)
	expression : ID .  (111)
	function_call_as_expression : ID . '(' parameters_in_function_call ')'  (118)

	'('  shift 112
	','  reduce 8
	'='  reduce 111
	PLUS_EQUAL  reduce 111
	MINUS_EQUAL  reduce 111
	MUL_EQUAL  reduce 111
	DIV_EQUAL  reduce 111
	MOD_EQUAL  reduce 111
	'?'  reduce 111
	AND  reduce 111
	OR  reduce 111
	XOR  reduce 111
	'>'  reduce 111
	GREATER_OR_EQUAL  reduce 111
	'<'  reduce 111
	LESS_OR_EQUAL  reduce 111
	DISTINCT  reduce 111
	EQUALS  reduce 111
	'+'  reduce 111
	'-'  reduce 111
	'*'  reduce 111
	'/'  reduce 111
	'%'  reduce 111
	PLUS_PLUS  reduce 111
	MINUS_MINUS  reduce 111
	'.'  reduce 111
	'['  reduce 111
	':'  reduce 8


state 63
	do_while : DO . ':' '{' statements '}' WHILE expression ';'  (65)
	do_while : DO . ':' statement WHILE expression ';'  (66)

	':'  shift 113
	.  error


state 64
	for : FOR . '(' for_parenthesis_body ')' ':' '{' statements '}'  (67)
	for : FOR . '(' for_parenthesis_body ')' ':' statement  (68)

	'('  shift 114
	.  error


state 65
	expression : '-' . expression  (102)

	INT_CONSTANT  shift 53
	REAL_CONSTANT  shift 54
	CHAR_CONSTANT  shift 55
	ID  shift 98
	'-'  shift 65
	'!'  shift 66
	PLUS_PLUS  shift 67
	MINUS_MINUS  shift 68
	'('  shift 69
	.  error

	assignment_as_expression  goto 99
	function_call_as_expression  goto 100
	pre_plus_plus_as_expression  goto 101
	pre_minus_minus_as_expression  goto 102
	post_plus_plus_as_expression  goto 103
	post_minus_minus_as_expression  goto 104
	expression  goto 115
	xor_expression  goto 95
	ternaryOperator  goto 96


state 66
	expression : '!' . expression  (101)

	INT_CONSTANT  shift 53
	REAL_CONSTANT  shift 54
	CHAR_CONSTANT  shift 55
	ID  shift 98
	'-'  shift 65
	'!'  shift 66
	PLUS_PLUS  shift 67
	MINUS_MINUS  shift 68
	'('  shift 69
	.  error

	assignment_as_expression  goto 99
	function_call_as_expression  goto 100
	pre_plus_plus_as_expression  goto 101
	pre_minus_minus_as_expression  goto 102
	post_plus_plus_as_expression  goto 103
	post_minus_minus_as_expression  goto 104
	expression  goto 116
	xor_expression  goto 95
	ternaryOperator  goto 96


state 67
	pre_plus_plus_as_expression : PLUS_PLUS . expression  (119)

	INT_CONSTANT  shift 53
	REAL_CONSTANT  shift 54
	CHAR_CONSTANT  shift 55
	ID  shift 98
	'-'  shift 65
	'!'  shift 66
	PLUS_PLUS  shift 67
	MINUS_MINUS  shift 68
	'('  shift 69
	.  error

	assignment_as_expression  goto 99
	function_call_as_expression  goto 100
	pre_plus_plus_as_expression  goto 101
	pre_minus_minus_as_expression  goto 102
	post_plus_plus_as_expression  goto 103
	post_minus_minus_as_expression  goto 104
	expression  goto 117
	xor_expression  goto 95
	ternaryOperator  goto 96


state 68
	pre_minus_minus_as_expression : MINUS_MINUS . expression  (120)

	INT_CONSTANT  shift 53
	REAL_CONSTANT  shift 54
	CHAR_CONSTANT  shift 55
	ID  shift 98
	'-'  shift 65
	'!'  shift 66
	PLUS_PLUS  shift 67
	MINUS_MINUS  shift 68
	'('  shift 69
	.  error

	assignment_as_expression  goto 99
	function_call_as_expression  goto 100
	pre_plus_plus_as_expression  goto 101
	pre_minus_minus_as_expression  goto 102
	post_plus_plus_as_expression  goto 103
	post_minus_minus_as_expression  goto 104
	expression  goto 118
	xor_expression  goto 95
	ternaryOperator  goto 96


state 69
	expression : '(' . simple_type ')' expression  (103)
	expression : '(' . expression ')'  (106)

	INT_CONSTANT  shift 53
	REAL_CONSTANT  shift 54
	CHAR_CONSTANT  shift 55
	INT  shift 16
	DOUBLE  shift 17
	CHAR  shift 18
	ID  shift 98
	'-'  shift 65
	'!'  shift 66
	PLUS_PLUS  shift 67
	MINUS_MINUS  shift 68
	'('  shift 69
	.  error

	simple_type  goto 119
	assignment_as_expression  goto 99
	function_call_as_expression  goto 100
	pre_plus_plus_as_expression  goto 101
	pre_minus_minus_as_expression  goto 102
	post_plus_plus_as_expression  goto 103
	post_minus_minus_as_expression  goto 104
	expression  goto 120
	xor_expression  goto 95
	ternaryOperator  goto 96


state 70
	variable_definitions : variable_definition .  (23)

	.  reduce 23


state 71
	main : DEF $$1 MAIN '(' ')' ':' VOID '{' function_body . '}'  (6)

	'}'  shift 121
	.  error


state 72
	function_body : variable_definitions . statements  (20)
	function_body : variable_definitions .  (21)
	variable_definitions : variable_definitions . variable_definition  (24)

	INT_CONSTANT  shift 53
	REAL_CONSTANT  shift 54
	CHAR_CONSTANT  shift 55
	INPUT  shift 56
	PRINT  shift 57
	PRINTLN  shift 58
	WHILE  shift 59
	IF  shift 60
	RETURN  shift 61
	ID  shift 62
	DO  shift 63
	FOR  shift 64
	'-'  shift 65
	'!'  shift 66
	PLUS_PLUS  shift 67
	MINUS_MINUS  shift 68
	'('  shift 69
	'}'  reduce 21

	variable_definition  goto 122
	variables  goto 8
	statements  goto 123
	statement  goto 74
	statement_without_semicolon  goto 75
	while  goto 76
	do_while  goto 77
	for  goto 78
	if  goto 79
	assignment_as_expression  goto 80
	function_call_as_expression  goto 81
	return  goto 82
	read  goto 83
	write  goto 84
	plus_equal  goto 85
	minus_equal  goto 86
	mul_equal  goto 87
	div_equal  goto 88
	mod_equal  goto 89
	pre_plus_plus_as_expression  goto 90
	pre_minus_minus_as_expression  goto 91
	post_plus_plus_as_expression  goto 92
	post_minus_minus_as_expression  goto 93
	expression  goto 94
	xor_expression  goto 95
	ternaryOperator  goto 96


state 73
	function_body : statements .  (22)
	statements : statements . statement  (26)

	INT_CONSTANT  shift 53
	REAL_CONSTANT  shift 54
	CHAR_CONSTANT  shift 55
	INPUT  shift 56
	PRINT  shift 57
	PRINTLN  shift 58
	WHILE  shift 59
	IF  shift 60
	RETURN  shift 61
	ID  shift 98
	DO  shift 63
	FOR  shift 64
	'-'  shift 65
	'!'  shift 66
	PLUS_PLUS  shift 67
	MINUS_MINUS  shift 68
	'('  shift 69
	'}'  reduce 22

	statement  goto 124
	statement_without_semicolon  goto 75
	while  goto 76
	do_while  goto 77
	for  goto 78
	if  goto 79
	assignment_as_expression  goto 80
	function_call_as_expression  goto 81
	return  goto 82
	read  goto 83
	write  goto 84
	plus_equal  goto 85
	minus_equal  goto 86
	mul_equal  goto 87
	div_equal  goto 88
	mod_equal  goto 89
	pre_plus_plus_as_expression  goto 90
	pre_minus_minus_as_expression  goto 91
	post_plus_plus_as_expression  goto 92
	post_minus_minus_as_expression  goto 93
	expression  goto 94
	xor_expression  goto 95
	ternaryOperator  goto 96


state 74
	statements : statement .  (25)

	.  reduce 25


state 75
	statement : statement_without_semicolon . ';'  (27)

	';'  shift 125
	.  error


state 76
	statement : while .  (28)

	.  reduce 28


state 77
	statement : do_while .  (29)

	.  reduce 29


state 78
	statement : for .  (30)

	.  reduce 30


state 79
	statement : if .  (31)

	.  reduce 31


state 80
	statement_without_semicolon : assignment_as_expression .  (32)
	expression : assignment_as_expression .  (117)

	','  reduce 32
	'='  reduce 117
	PLUS_EQUAL  reduce 117
	MINUS_EQUAL  reduce 117
	MUL_EQUAL  reduce 117
	DIV_EQUAL  reduce 117
	MOD_EQUAL  reduce 117
	'?'  reduce 117
	AND  reduce 117
	OR  reduce 117
	XOR  reduce 117
	'>'  reduce 117
	GREATER_OR_EQUAL  reduce 117
	'<'  reduce 117
	LESS_OR_EQUAL  reduce 117
	DISTINCT  reduce 117
	EQUALS  reduce 117
	'+'  reduce 117
	'-'  reduce 117
	'*'  reduce 117
	'/'  reduce 117
	'%'  reduce 117
	PLUS_PLUS  reduce 117
	MINUS_MINUS  reduce 117
	'.'  reduce 117
	'['  reduce 117
	')'  reduce 32
	';'  reduce 32


state 81
	statement_without_semicolon : function_call_as_expression .  (33)
	expression : function_call_as_expression .  (107)

	','  reduce 33
	'='  reduce 107
	PLUS_EQUAL  reduce 107
	MINUS_EQUAL  reduce 107
	MUL_EQUAL  reduce 107
	DIV_EQUAL  reduce 107
	MOD_EQUAL  reduce 107
	'?'  reduce 107
	AND  reduce 107
	OR  reduce 107
	XOR  reduce 107
	'>'  reduce 107
	GREATER_OR_EQUAL  reduce 107
	'<'  reduce 107
	LESS_OR_EQUAL  reduce 107
	DISTINCT  reduce 107
	EQUALS  reduce 107
	'+'  reduce 107
	'-'  reduce 107
	'*'  reduce 107
	'/'  reduce 107
	'%'  reduce 107
	PLUS_PLUS  reduce 107
	MINUS_MINUS  reduce 107
	'.'  reduce 107
	'['  reduce 107
	')'  reduce 33
	';'  reduce 33


state 82
	statement_without_semicolon : return .  (34)

	.  reduce 34


state 83
	statement_without_semicolon : read .  (35)

	.  reduce 35


state 84
	statement_without_semicolon : write .  (36)

	.  reduce 36


state 85
	statement_without_semicolon : plus_equal .  (37)

	.  reduce 37


state 86
	statement_without_semicolon : minus_equal .  (38)

	.  reduce 38


state 87
	statement_without_semicolon : mul_equal .  (39)

	.  reduce 39


state 88
	statement_without_semicolon : div_equal .  (40)

	.  reduce 40


state 89
	statement_without_semicolon : mod_equal .  (41)

	.  reduce 41


state 90
	statement_without_semicolon : pre_plus_plus_as_expression .  (42)
	expression : pre_plus_plus_as_expression .  (112)

	','  reduce 42
	'='  reduce 112
	PLUS_EQUAL  reduce 112
	MINUS_EQUAL  reduce 112
	MUL_EQUAL  reduce 112
	DIV_EQUAL  reduce 112
	MOD_EQUAL  reduce 112
	'?'  reduce 112
	AND  reduce 112
	OR  reduce 112
	XOR  reduce 112
	'>'  reduce 112
	GREATER_OR_EQUAL  reduce 112
	'<'  reduce 112
	LESS_OR_EQUAL  reduce 112
	DISTINCT  reduce 112
	EQUALS  reduce 112
	'+'  reduce 112
	'-'  reduce 112
	'*'  reduce 112
	'/'  reduce 112
	'%'  reduce 112
	PLUS_PLUS  reduce 112
	MINUS_MINUS  reduce 112
	'.'  reduce 112
	'['  reduce 112
	')'  reduce 42
	';'  reduce 42


state 91
	statement_without_semicolon : pre_minus_minus_as_expression .  (43)
	expression : pre_minus_minus_as_expression .  (113)

	','  reduce 43
	'='  reduce 113
	PLUS_EQUAL  reduce 113
	MINUS_EQUAL  reduce 113
	MUL_EQUAL  reduce 113
	DIV_EQUAL  reduce 113
	MOD_EQUAL  reduce 113
	'?'  reduce 113
	AND  reduce 113
	OR  reduce 113
	XOR  reduce 113
	'>'  reduce 113
	GREATER_OR_EQUAL  reduce 113
	'<'  reduce 113
	LESS_OR_EQUAL  reduce 113
	DISTINCT  reduce 113
	EQUALS  reduce 113
	'+'  reduce 113
	'-'  reduce 113
	'*'  reduce 113
	'/'  reduce 113
	'%'  reduce 113
	PLUS_PLUS  reduce 113
	MINUS_MINUS  reduce 113
	'.'  reduce 113
	'['  reduce 113
	')'  reduce 43
	';'  reduce 43


state 92
	statement_without_semicolon : post_plus_plus_as_expression .  (44)
	expression : post_plus_plus_as_expression .  (114)

	','  reduce 44
	'='  reduce 114
	PLUS_EQUAL  reduce 114
	MINUS_EQUAL  reduce 114
	MUL_EQUAL  reduce 114
	DIV_EQUAL  reduce 114
	MOD_EQUAL  reduce 114
	'?'  reduce 114
	AND  reduce 114
	OR  reduce 114
	XOR  reduce 114
	'>'  reduce 114
	GREATER_OR_EQUAL  reduce 114
	'<'  reduce 114
	LESS_OR_EQUAL  reduce 114
	DISTINCT  reduce 114
	EQUALS  reduce 114
	'+'  reduce 114
	'-'  reduce 114
	'*'  reduce 114
	'/'  reduce 114
	'%'  reduce 114
	PLUS_PLUS  reduce 114
	MINUS_MINUS  reduce 114
	'.'  reduce 114
	'['  reduce 114
	')'  reduce 44
	';'  reduce 44


state 93
	statement_without_semicolon : post_minus_minus_as_expression .  (45)
	expression : post_minus_minus_as_expression .  (115)

	','  reduce 45
	'='  reduce 115
	PLUS_EQUAL  reduce 115
	MINUS_EQUAL  reduce 115
	MUL_EQUAL  reduce 115
	DIV_EQUAL  reduce 115
	MOD_EQUAL  reduce 115
	'?'  reduce 115
	AND  reduce 115
	OR  reduce 115
	XOR  reduce 115
	'>'  reduce 115
	GREATER_OR_EQUAL  reduce 115
	'<'  reduce 115
	LESS_OR_EQUAL  reduce 115
	DISTINCT  reduce 115
	EQUALS  reduce 115
	'+'  reduce 115
	'-'  reduce 115
	'*'  reduce 115
	'/'  reduce 115
	'%'  reduce 115
	PLUS_PLUS  reduce 115
	MINUS_MINUS  reduce 115
	'.'  reduce 115
	'['  reduce 115
	')'  reduce 45
	';'  reduce 45


state 94
	plus_equal : expression . PLUS_EQUAL expression  (82)
	minus_equal : expression . MINUS_EQUAL expression  (83)
	mul_equal : expression . MUL_EQUAL expression  (84)
	div_equal : expression . DIV_EQUAL expression  (85)
	mod_equal : expression . MOD_EQUAL expression  (86)
	expression : expression . AND expression  (87)
	expression : expression . OR expression  (88)
	expression : expression . '>' expression  (90)
	expression : expression . GREATER_OR_EQUAL expression  (91)
	expression : expression . '<' expression  (92)
	expression : expression . LESS_OR_EQUAL expression  (93)
	expression : expression . DISTINCT expression  (94)
	expression : expression . EQUALS expression  (95)
	expression : expression . '+' expression  (96)
	expression : expression . '-' expression  (97)
	expression : expression . '*' expression  (98)
	expression : expression . '/' expression  (99)
	expression : expression . '%' expression  (100)
	expression : expression . '.' ID  (104)
	expression : expression . '[' expression ']'  (105)
	post_plus_plus_as_expression : expression . PLUS_PLUS  (121)
	post_minus_minus_as_expression : expression . MINUS_MINUS  (122)
	ternaryOperator : expression . '?' expression ':' expression  (123)
	assignment_as_expression : expression . '=' expression  (124)
	xor_expression : expression . XOR expression  (125)

	'='  shift 126
	PLUS_EQUAL  shift 127
	MINUS_EQUAL  shift 128
	MUL_EQUAL  shift 129
	DIV_EQUAL  shift 130
	MOD_EQUAL  shift 131
	'?'  shift 132
	AND  shift 133
	OR  shift 134
	XOR  shift 135
	'>'  shift 136
	GREATER_OR_EQUAL  shift 137
	'<'  shift 138
	LESS_OR_EQUAL  shift 139
	DISTINCT  shift 140
	EQUALS  shift 141
	'+'  shift 142
	'-'  shift 143
	'*'  shift 144
	'/'  shift 145
	'%'  shift 146
	PLUS_PLUS  shift 147
	MINUS_MINUS  shift 148
	'.'  shift 149
	'['  shift 150
	.  error


state 95
	expression : xor_expression .  (89)

	.  reduce 89


state 96
	expression : ternaryOperator .  (116)

	.  reduce 116


state 97
	function_definition : DEF $$2 ID '(' parameters ')' ':' return_type '{' . function_body '}'  (11)
	function_body : .  (19)

	INT_CONSTANT  shift 53
	REAL_CONSTANT  shift 54
	CHAR_CONSTANT  shift 55
	INPUT  shift 56
	PRINT  shift 57
	PRINTLN  shift 58
	WHILE  shift 59
	IF  shift 60
	RETURN  shift 61
	ID  shift 62
	DO  shift 63
	FOR  shift 64
	'-'  shift 65
	'!'  shift 66
	PLUS_PLUS  shift 67
	MINUS_MINUS  shift 68
	'('  shift 69
	'}'  reduce 19

	variable_definition  goto 70
	function_body  goto 151
	variables  goto 8
	variable_definitions  goto 72
	statements  goto 73
	statement  goto 74
	statement_without_semicolon  goto 75
	while  goto 76
	do_while  goto 77
	for  goto 78
	if  goto 79
	assignment_as_expression  goto 80
	function_call_as_expression  goto 81
	return  goto 82
	read  goto 83
	write  goto 84
	plus_equal  goto 85
	minus_equal  goto 86
	mul_equal  goto 87
	div_equal  goto 88
	mod_equal  goto 89
	pre_plus_plus_as_expression  goto 90
	pre_minus_minus_as_expression  goto 91
	post_plus_plus_as_expression  goto 92
	post_minus_minus_as_expression  goto 93
	expression  goto 94
	xor_expression  goto 95
	ternaryOperator  goto 96


state 98
	expression : ID .  (111)
	function_call_as_expression : ID . '(' parameters_in_function_call ')'  (118)
